# Lab_Materia

./: README.md
lab_materia/Project/: CMakeLists.txt  Makefile  cmake_install.cmake
lab_materia/Project/Lab_Data/: 03_06_24_vetro_oro_0_T_800_0_0004_Run_1_1.txt  03_06_24_vetro_oro_11_T_800_0_0004_Run_1_1.txt  03_06_24_vetro_oro_12_T_800_0_0002_Run_1_1.txt  03_06_24_vetro_oro_13_T_800_0_0009_Run_1_1.txt  03_06_24_vetro_oro_15_A_800_0_0009_Run_2_C_500_1.txt  03_06_24_vetro_oro_15_T_800_-0_0002_RERun_3_C_500_1.txt  03_06_24_vetro_oro_15_T_800_-0_0002_Run_3_C_500_1.txt  03_06_24_vetro_oro_15_T_800_0_0004_Run_1_1.txt  03_06_24_vetro_oro_15_T_800_0_0006_Run_1_1.txt  03_06_24_vetro_oro_5_T_800_-0_0003_Run_1_1.txt  03_06_24_vetro_oro_A_T_800_0_0003_Run_4_C_500_1.txt  03_06_24_vetro_oro_C_T_800_-0_0001_Run_3_C_500_1.txt  03_06_24_vetro_oro_C_T_800_-0_0005_Run_4_C_500_1.txt  03_06_24_vetro_oro_C_T_800_0_0004_Run_2_C_500_1.txt
lab_materia/Project/Macros/: AbsToTrans.cpp  Clear_Directory.sh  Cooked.cpp  Difference.cpp  Differences.sh  DrawNormalizedThick.cpp  DrawTabs.cpp  InfoWriter.py  Makefile  NameChange.cpp  PrintDirectory.sh  Ratio.cpp  Run.cpp  Run.sh  main.cpp
lab_materia/Project/Normalized_Thickness/: distribution_data.txt
lab_materia/Project/Run_Data/: Data_names.txt  WriteFileNames.sh
lab_materia/Project/Tab_Data/: Cielsky.txt  Johnson.txt  Lemarchand.txt  Olmon.txt  Rosenblat.txt  Yakubonsky4nm.txt
lab_materia/Project/builddir/: AbsToTrans  CMakeCache.txt  Cooked  Difference  DrawNormalizedThick  DrawTabs  Makefile  NameChange  Ratio  Run  cmake_install.cmake  (+1 more)
(+447 files in other folders)
